compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@method_on_struct.tapir.snap
---
source: compiler/src/compile/ir.rs
expression: output
input_file: compiler/src/compile/snapshot_tests/ir/method_on_struct.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 3
temp.8 = int 4
temp.4.x.5 = temp.7
temp.4.y.6 = temp.8
temp.11 = temp.4.x.5
temp.3.x.9 = temp.11
temp.12 = temp.4.y.6
temp.3.y.10 = temp.12
temp.15 = temp.3.x.9
p.x.13 = temp.15
temp.16 = temp.3.y.10
p.y.14 = temp.16
temp.21 = p.x.13
temp.18.x.19 = temp.21
temp.22 = p.y.14
temp.18.y.20 = temp.22
temp.17 = Point@sum(temp.18.x.19, temp.18.y.20)
total.1 = temp.17
return 

=======================
fn Point@sum(self.x.23, self.y.24) -> int

---- block 0 ----
temp.31 = self.x.23
temp.28.x.29 = temp.31
temp.32 = self.y.24
temp.28.y.30 = temp.32
temp.26 = temp.28.x.29
temp.36 = self.x.23
temp.33.x.34 = temp.36
temp.37 = self.y.24
temp.33.y.35 = temp.37
temp.27 = temp.33.y.35
temp.25 = temp.26 + temp.27
return temp.25
