compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@multi_assign_extern.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/ir/multi_assign_extern.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.2, temp.3 = extern get_position()
x.0 = temp.2
y.1 = temp.3
temp.4, temp.5 = extern get_position()
x.0 = temp.4
y.1 = temp.5
return
