compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@multi_assign_function.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/ir/multi_assign_function.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.2, temp.3 = returns_two()
a.0 = temp.2
b.1 = temp.3
temp.4, temp.5 = returns_two()
a.0 = temp.4
b.1 = temp.5
return 

=======================
fn returns_two() -> int, fix

---- block 0 ----
temp.6 = int 1
temp.7 = fix 2
return temp.6, temp.7
