compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@multi_assign_mixed_calls.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/ir/multi_assign_mixed_calls.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.3 = foo()
temp.4 = bar()
a.1 = temp.3
b.2 = temp.4
return 

=======================
fn foo() -> int

---- block 0 ----
temp.5 = int 1
return temp.5

=======================
fn bar() -> int

---- block 0 ----
temp.6 = int 2
return temp.6
