compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@multi_assign_paired.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/ir/multi_assign_paired.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.5 = int 1
temp.6 = int 2
a.0 = temp.5
b.1 = temp.6
temp.7 = fix 1
temp.8 = fix 2
temp.9 = fix 3
x.2 = temp.7
y.3 = temp.8
z.4 = temp.9
return
