compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@multi_assign_swap.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/ir/multi_assign_swap.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.3 = int 1
temp.4 = int 2
a.1 = temp.3
b.2 = temp.4
temp.5 = b.2
temp.6 = a.1
a.1 = temp.5
b.2 = temp.6
return
