compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@operator_overload.tapir.snap
---
source: compiler/src/compile/ir.rs
expression: output
input_file: compiler/src/compile/snapshot_tests/ir/operator_overload.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.8 = int 1
temp.9 = int 2
temp.5.x.6 = temp.8
temp.5.y.7 = temp.9
p1.x.10 = temp.5.x.6
p1.y.11 = temp.5.y.7
temp.15 = int 3
temp.16 = int 4
temp.12.x.13 = temp.15
temp.12.y.14 = temp.16
p2.x.17 = temp.12.x.13
p2.y.18 = temp.12.y.14
temp.20.x.21 = p1.x.10
temp.20.y.22 = p1.y.11
temp.23.x.24 = p2.x.17
temp.23.y.25 = p2.y.18
temp.19.x.26, temp.19.y.27 = Point@+@Point(temp.20.x.21, temp.20.y.22, temp.23.x.24, temp.23.y.25)
p3.x.28 = temp.19.x.26
p3.y.29 = temp.19.y.27
return 

=======================
fn Point@+@Point(a.x.30, a.y.31, b.x.32, b.y.33) -> int, int

---- block 0 ----
temp.41.x.42 = a.x.30
temp.41.y.43 = a.y.31
temp.39 = temp.41.x.42
temp.44.x.45 = b.x.32
temp.44.y.46 = b.y.33
temp.40 = temp.44.x.45
temp.38 = temp.39 + temp.40
temp.50.x.51 = a.x.30
temp.50.y.52 = a.y.31
temp.48 = temp.50.y.52
temp.53.x.54 = b.x.32
temp.53.y.55 = b.y.33
temp.49 = temp.53.y.55
temp.47 = temp.48 + temp.49
temp.35.x.36 = temp.38
temp.35.y.37 = temp.47
temp.34.x.56 = temp.35.x.36
temp.34.y.57 = temp.35.y.37
return temp.34.x.56, temp.34.y.57
