compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@regalloc_many_vars.tapir.snap
---
source: compiler/src/compile/ir.rs
expression: output
input_file: compiler/src/compile/snapshot_tests/ir/regalloc_many_vars.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
return 

=======================
fn vec2@negate(self.x.11, self.y.12) -> int, int

---- block 0 ----
temp.18 = int 0
temp.20.x.21 = self.x.11
temp.20.y.22 = self.y.12
temp.19 = temp.20.x.21
temp.17 = temp.18 - temp.19
temp.24 = int 0
temp.26.x.27 = self.x.11
temp.26.y.28 = self.y.12
temp.25 = temp.26.y.28
temp.23 = temp.24 - temp.25
temp.14.x.15 = temp.17
temp.14.y.16 = temp.23
temp.13.x.29 = temp.14.x.15
temp.13.y.30 = temp.14.y.16
return temp.13.x.29, temp.13.y.30

=======================
fn vec2@transform(self.x.31, self.y.32) -> int, int

---- block 0 ----
temp.40.x.41 = self.x.31
temp.40.y.42 = self.y.32
temp.38 = temp.40.x.41
temp.39 = int 1
temp.37 = temp.38 + temp.39
temp.46.x.47 = self.x.31
temp.46.y.48 = self.y.32
temp.44 = temp.46.y.48
temp.45 = int 1
temp.43 = temp.44 + temp.45
temp.34.x.35 = temp.37
temp.34.y.36 = temp.43
temp.33.x.49 = temp.34.x.35
temp.33.y.50 = temp.34.y.36
return temp.33.x.49, temp.33.y.50

=======================
fn main() -> 

---- block 0 ----
temp.54 = int 1
temp.55 = int 2
temp.51.x.52 = temp.54
temp.51.y.53 = temp.55
v1.x.56 = temp.51.x.52
v1.y.57 = temp.51.y.53
temp.61 = int 3
temp.62 = int 4
temp.58.x.59 = temp.61
temp.58.y.60 = temp.62
v2.x.63 = temp.58.x.59
v2.y.64 = temp.58.y.60
temp.68 = int 5
temp.69 = int 6
temp.65.x.66 = temp.68
temp.65.y.67 = temp.69
v3.x.70 = temp.65.x.66
v3.y.71 = temp.65.y.67
temp.75 = int 7
temp.76 = int 8
temp.72.x.73 = temp.75
temp.72.y.74 = temp.76
v4.x.77 = temp.72.x.73
v4.y.78 = temp.72.y.74
temp.82 = int 9
temp.83 = int 10
temp.79.x.80 = temp.82
temp.79.y.81 = temp.83
v5.x.84 = temp.79.x.80
v5.y.85 = temp.79.y.81
temp.89 = int 11
temp.90 = int 12
temp.86.x.87 = temp.89
temp.86.y.88 = temp.90
v6.x.91 = temp.86.x.87
v6.y.92 = temp.86.y.88
temp.96 = int 13
temp.97 = int 14
temp.93.x.94 = temp.96
temp.93.y.95 = temp.97
v7.x.98 = temp.93.x.94
v7.y.99 = temp.93.y.95
temp.102.x.103 = v1.x.56
temp.102.y.104 = v1.y.57
temp.101 = temp.102.x.103
temp.100 = extern use_val(temp.101)
temp.107.x.108 = v2.x.63
temp.107.y.109 = v2.y.64
temp.106 = temp.107.x.108
temp.105 = extern use_val(temp.106)
temp.112.x.113 = v3.x.70
temp.112.y.114 = v3.y.71
temp.111 = temp.112.x.113
temp.110 = extern use_val(temp.111)
temp.117.x.118 = v4.x.77
temp.117.y.119 = v4.y.78
temp.116 = temp.117.x.118
temp.115 = extern use_val(temp.116)
temp.122.x.123 = v5.x.84
temp.122.y.124 = v5.y.85
temp.121 = temp.122.x.123
temp.120 = extern use_val(temp.121)
temp.127.x.128 = v6.x.91
temp.127.y.129 = v6.y.92
temp.126 = temp.127.x.128
temp.125 = extern use_val(temp.126)
temp.132.x.133 = v7.x.98
temp.132.y.134 = v7.y.99
temp.131 = temp.132.x.133
temp.130 = extern use_val(temp.131)
temp.136.x.137 = v1.x.56
temp.136.y.138 = v1.y.57
temp.135.x.139, temp.135.y.140 = vec2@negate(temp.136.x.137, temp.136.y.138)
neg.x.141 = temp.135.x.139
neg.y.142 = temp.135.y.140
temp.145.x.146 = neg.x.141
temp.145.y.147 = neg.y.142
temp.144 = temp.145.x.146
temp.143 = extern use_val(temp.144)
temp.149.x.150 = v2.x.63
temp.149.y.151 = v2.y.64
temp.148.x.152, temp.148.y.153 = vec2@transform(temp.149.x.150, temp.149.y.151)
trans.x.154 = temp.148.x.152
trans.y.155 = temp.148.y.153
temp.158.x.159 = trans.x.154
temp.158.y.160 = trans.y.155
temp.157 = temp.158.x.159
temp.156 = extern use_val(temp.157)
return
